traefik.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  namespace: kube-public
spec:
  replicas: 2
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      restartPolicy: Always
      serviceAccountName: traefik-ingress-controller
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - traefik
            topologyKey: "kubernetes.io/hostname"
      containers:
      - name: traefik
        image: traefik:2.7
        args:
        - "--api.insecure=true"
        - "--providers.kubernetescrd"
        - "--entrypoints.web.Address=:80"
        - "--entrypoints.websecure.Address=:443"
        ports:
        - name: web
          containerPort: 80
          hostPort: 30021
        - name: admin
          containerPort: 8080
          hostPort: 30042
