poll.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: poll
  namespace: default
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: poll
